--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "geist": "^1.4.2",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
+    "lodash.merge": "^4.6.2",
     "lucide-react": "^0.533.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
@@ -30,6 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/html2canvas": "^0.5.35",
+    "@types/lodash.merge": "^4.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
