--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crc": "^4.3.2",
     "geist": "^1.4.2",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "lodash.merge": "^4.6.2",
     "lucide-react": "^0.533.0",
+    "lz-string": "^1.5.0",
+    "lzma-native": "^8.0.6",
+    "msgpack-lite": "^0.1.26",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "node-base91": "^0.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -32,6 +37,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/html2canvas": "^0.5.35",
     "@types/lodash.merge": "^4.6.9",
+    "@types/lzma-native": "^4.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
