--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "node-base91": "^0.3.4",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -39,6 +40,7 @@
     "@types/lodash.merge": "^4.6.9",
     "@types/lzma-native": "^4.0.4",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
